--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx ts-node src/index.ts",
+    "dev": "npx ts-node prebuild.ts && npx nodemon src/index.ts",
     "lint": "eslint . --fix"
   },
   "author": "mahapatraakash",
@@ -18,10 +18,12 @@
     "@typescript-eslint/parser": "^5.54.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
+    "nodemon": "^2.0.21",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.289.0",
     "express": "^4.18.2"
   }
 }
