--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=$NODE_ENV webpack",
-    "dev": "npx ts-node src/index.ts",
+    "dev": "npx ts-node prebuild.ts && npx nodemon src/index.ts",
     "lint": "eslint . --fix"
   },
   "author": "mahapatraakash",
@@ -19,11 +19,13 @@
     "@typescript-eslint/parser": "^5.54.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
+    "nodemon": "^2.0.21",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@aws-sdk/client-secrets-manager": "^3.289.0",
     "express": "^4.18.2",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1",
