Rectified spelling and format error in appspec.yml

--- a/appspec.yml
+++ b/appspec.yml
@@ -2,10 +2,14 @@ version: 0.0
 os: linux
 files:
   - source: /
-  - destinaton: /home/ec2-user/aws-node-ts-backend
+    destination: /home/ec2-user/aws-node-ts-backend
 hooks:
   ApplicationStop:
     - location: scripts/application_stop.sh
+      timeout: 300
+      runas: ec2-user
+  BeforeInstall:
+    - location: scripts/before_install.sh
       timeout: 300
       runas: ec2-user
   ApplicationStart:
